--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
     <h1>バイト予定追加アプリ 🗓️</h1>
-    <p>日付をクリックすると、その日に「バイト (09:00-20:00)」の予定を追加します。</p>
 
-    <div id="auth-container" class="controls">
-        </div>
+    
 
     <div id="calendar-container" style="display: none;">
         <div class="calendar-header">
@@ -23,6 +21,7 @@
     </div>
 
     <p id="status"></p>
+    <div id="auth-container" class="controls"></div>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://apis.google.com/js/api.js" async defer></script>
